+ Updated and expanded dozens of existing terms and sources
+ Updated [Kirby](https://getkirby.com/) to version 2.3.2
+ Updated [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) plugin to version 0.0.8
+ Deprecated [Related Pages](https://github.com/bastianallgeier/kirbycms-extensions/tree/master/plugins/related) plugin
+ Fixed outdated links on [About](/about) page
+ Simplified previous and next page navigation

## 24 August 2016

Version: 2.0.0
Terms: 903
Sources: 81

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded literally hundreds of existing terms
+ Migrated project to [GitHub](https://github.com/)
+ Content now published using [Kirby](http://getkirby.com/)
+ Began expanding metadata and background information for all [sources](/sources)
+ Added a long overdue [About](/about) section, colophon, and style guide
+ Added random term feature

## 21 November 2004

Version: 1.0.5
Terms: 756
Sources: 49

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources
+ Not released publicly

## 06 October 2002
 
Version: 1.0.4
Terms: 704
Sources: 45

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources

## 18 December 2001
 
Version: 1.0.3
Terms: 673
Sources: 40

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources

## 30 October 2001
 
Version: 1.0.2
Terms: 649
Sources: 38

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources

## 25 September 2001
 
Version: 1.0.1
Terms: 632
Sources: 34

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources

## 25 June 2001
 
Version: 1.0.0
Terms: 617
Sources: 31

### Summary of changes:

+ New terms
+ New sources
+ Updated and expanded dozens of existing terms and sources

## 31 May 2001
 
Version: 1.0.0b2