@@ -1,0 +1,10 @@
+Title: Search
+
+----
+
+Description: Search the glossary for terms, sources, and othe information.
+
+----
+
+Text:
+
